--- a/clientapp/app/src/main/res/layout/activity_main.xml
+++ b/clientapp/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,57 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.d062589.partylive.MainActivity" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="party"
+            type="com.example.d062589.partylive.Party"/>
+    </data>
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="@color/colorText"
+        tools:context="com.example.d062589.partylive.MainActivity">
+
+
+        <!-- main content layout-->
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/colorText"
+            tools:context="com.example.d062589.partylive.MainActivity" />
+
+
+
+        <!-- bottom sheet -->
+        <include layout="@layout/party_sheet"
+            bind:party="@{party}"/>
+
+
+
+        <!-- Main FAB (Create a Party) -->
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:onClick="addParty"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_big"
+
+            app:layout_anchor="@+id/layout_bottom_sheet_upper_box"
+            app:layout_anchorGravity="top|end"
+
+            android:elevation="@dimen/z_above_bottom_sheet"
+
+            android:tint="@color/colorText"
+            app:rippleColor="@color/colorBackground"
+            android:src="@drawable/plus" />
+
+
+    </android.support.design.widget.CoordinatorLayout>
+
+</layout>
