--- a/clientapp/app/src/main/res/values/colors.xml
+++ b/clientapp/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F6B300</color>
+    <color name="colorPrimary">#222222</color>
+    <color name="colorBackground">#333333</color>
     <color name="colorPrimaryDark">#222222</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="color_bottom_sheet">#222222</color>
+    <color name="colorAccent">#F6B300</color>
+    <color name="colorText">#FAFAFA</color>
+
 </resources>
