most of the bottom sheet done + restclient

--- a/clientapp/app/src/main/res/layout/activity_main.xml
+++ b/clientapp/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,8 @@
 
 
         <!-- bottom sheet -->
-        <include layout="@layout/party_sheet"
+        <include
+            layout="@layout/party_sheet"
             bind:party="@{party}"/>
 
 
