--- a/clientapp/app/src/main/res/values/dimen.xml
+++ b/clientapp/app/src/main/res/values/dimen.xml
@@ -20,6 +20,7 @@
     <dimen name="z_bottom_sheet">6dp</dimen>
 
     <!-- margin -->
+    <dimen name="margin_huge">18dp</dimen>
     <dimen name="margin_big">12dp</dimen>
     <dimen name="margin_medium">10dp</dimen>
     <dimen name="margin_normal">8dp</dimen>
