--- a/clientapp/app/src/main/res/layout/party_details.xml
+++ b/clientapp/app/src/main/res/layout/party_details.xml
@@ -7,17 +7,73 @@
     </data>
 
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.75">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
+        <android.support.design.widget.TabLayout
+            android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textColor="@color/colorText"
-            android:text="Insert Party Details here"/>
+            android:layout_height="0dp"
+            android:layout_weight="0.15"
+            app:tabMode="fixed"
+            app:tabTextColor="@color/colorText"
+            app:tabSelectedTextColor="@color/colorAccent"/>
 
-    </RelativeLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.7"
+            android:background="@color/colorBackground" />
+
+        <!-- Buttons -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.15"
+            android:gravity="bottom">
+
+            <!-- Stay at home Button -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="match_parent"
+                android:onClick="">
+
+                <com.example.d062589.partylive.FontAwesome
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+
+                    android:text="@string/stay_home"
+
+                    android:textColor="@color/colorText"
+                    android:background="@color/colorPrimary"/>
+            </LinearLayout>
+
+            <!-- Participate Button -->
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="0.5"
+                android:layout_height="match_parent"
+                android:onClick="">
+
+                <com.example.d062589.partylive.FontAwesome
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+
+                    android:text="@string/participate"
+
+                    android:textColor="@color/colorText"
+                    android:background="@color/colorPrimary"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+    </LinearLayout>
+
 
 </layout>
