--- a/clientapp/app/src/main/res/layout/activity_party_creator.xml
+++ b/clientapp/app/src/main/res/layout/activity_party_creator.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="party"
-            type="com.example.d062589.partylive.Party"/>
+            type="com.example.d062589.partylive.Models.Party"/>
     </data>
     <android.support.design.widget.CoordinatorLayout
         xmlns:tools="http://schemas.android.com/tools"
@@ -11,31 +11,11 @@
         android:layout_height="match_parent"
         android:textColor="@color/colorText"
         android:background="@color/colorBackground"
-        tools:context="com.example.d062589.partylive.PartyCreatorActivity">
+        tools:context="com.example.d062589.partylive.Activities.PartyCreatorActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/messagesContainer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="false"
-                android:layout_alignParentTop="false"
-                android:layout_marginBottom="20dp"
-                android:layout_above="@+id/messageEdit"
-                android:layout_marginTop="10dp"
-                android:listSelector="@android:color/transparent"
-                android:transcriptMode="alwaysScroll"
-                android:divider="@null" />
-
-            <EditText
-                android:id="@+id/messageEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:hint="type message" />
 
             <Button
                 android:layout_width="match_parent"
@@ -43,6 +23,12 @@
                 android:text="Configure Party"
                 android:onClick="configurePartyDetails"
                 android:layout_alignParentBottom="true"/>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Create sample party at my position"
+                android:onClick="createSamplePartyHere"/>
 
         </RelativeLayout>
 
