--- a/clientapp/app/src/main/res/layout/list_bringalong.xml
+++ b/clientapp/app/src/main/res/layout/list_bringalong.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.d062589.partylive.FontAwesome
+<TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/textitext"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
 
     android:textColor="@color/colorText"
+    android:text="HALLO BRINGALONG">
+</TextView>
 
-    android:paddingStart="@dimen/margin_small"
-    android:paddingBottom="@dimen/margin_huge"
-    android:paddingEnd="@dimen/margin_huge"
-    android:paddingTop="@dimen/margin_small"/>
