--- a/clientapp/app/src/main/res/layout/party_details.xml
+++ b/clientapp/app/src/main/res/layout/party_details.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="party"
-            type="com.example.d062589.partylive.Party"/>
+            type="com.example.d062589.partylive.Models.Party"/>
     </data>
 
 
@@ -19,7 +19,8 @@
             android:layout_weight="0.15"
             app:tabMode="fixed"
             app:tabTextColor="@color/colorText"
-            app:tabSelectedTextColor="@color/colorAccent"/>
+            app:tabSelectedTextColor="@color/colorAccent"
+            app:tabTextAppearance="@style/MyCustomTextAppearance"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
@@ -42,7 +43,7 @@
                 android:layout_height="match_parent"
                 android:onClick="">
 
-                <com.example.d062589.partylive.FontAwesome
+                <com.example.d062589.partylive.Utils.FontAwesome
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -60,7 +61,7 @@
                 android:layout_height="match_parent"
                 android:onClick="">
 
-                <com.example.d062589.partylive.FontAwesome
+                <com.example.d062589.partylive.Utils.FontAwesome
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
