--- a/clientapp/app/src/main/res/layout/party_sheet.xml
+++ b/clientapp/app/src/main/res/layout/party_sheet.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="party"
-            type="com.example.d062589.partylive.Party"/>
+            type="com.example.d062589.partylive.Models.Party"/>
     </data>
 
     <LinearLayout
