--- a/clientapp/app/src/main/res/layout/activity_start.xml
+++ b/clientapp/app/src/main/res/layout/activity_start.xml
@@ -8,19 +8,11 @@
     android:padding="24dp"
     android:weightSum="10">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginBottom="24dp"
-        android:layout_weight="3"
-        android:contentDescription="Login-Image"
-        android:src="@drawable/marker_active" />
-
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
-        android:layout_weight="4"
         android:gravity="center"
         android:text="@string/app_name"
         android:textSize="48dp"
@@ -34,9 +26,8 @@
         android:background="@color/colorAccent"
         android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
         android:onClick="onLoginPressed"
-        android:paddingLeft="110dp"
         android:text=" LOGIN"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textStyle="bold" />
 
     <android.support.v7.widget.AppCompatButton
@@ -48,13 +39,12 @@
         android:layout_marginRight="24dp"
         android:layout_marginTop="0dp"
         android:background="@color/colorAccent"
+        android:clickable="false"
         android:drawableStart="@drawable/ic_person_add_black_24dp"
         android:enabled="false"
-        android:clickable="false"
         android:onClick="onSignUpPressed"
-        android:paddingLeft="100dp"
         android:text=" SIGN UP"
-        android:textAlignment="textStart"
+        android:textAlignment="center"
         android:textStyle="bold" />
 
     <View
@@ -72,16 +62,25 @@
         android:id="@+id/btn_login_facebook"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/facebook_login"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnLoginFacebook"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_margin="24dp"
-        android:background="@color/colorAccent"
-        android:padding="16dp"
-        android:text="Login With Facebook" />
+        android:background="#3b5998"
+        android:text="FACEBOOK"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
+    <Button
+        android:id="@+id/btnLoginGoogle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="24dp"
+        android:layout_marginLeft="24dp"
+        android:background="#d34836"
+        android:text="GOOGLE+"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
 </LinearLayout>
