--- a/clientapp/app/src/main/res/layout/list_bringalong.xml
+++ b/clientapp/app/src/main/res/layout/list_bringalong.xml
@@ -1,12 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textitext"
+
+    android:id="@+id/bringalongRecycler"
+    android:scrollbars="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-
-    android:textColor="@color/colorText"
-    android:text="HALLO BRINGALONG">
-</TextView>
-
+    android:layout_height="match_parent"/>
