--- a/clientapp/app/src/main/res/layout/party_details.xml
+++ b/clientapp/app/src/main/res/layout/party_details.xml
@@ -41,9 +41,10 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
-                android:onClick="">
+                android:onClick="stayHome">
 
                 <com.example.d062589.partylive.Utils.FontAwesome
+                    android:id="@+id/stay_home_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
@@ -59,9 +60,10 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
-                android:onClick="">
+                android:onClick="participate">
 
                 <com.example.d062589.partylive.Utils.FontAwesome
+                    android:id="@+id/participate_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
