--- a/clientapp/app/src/debug/res/values/google_maps_api.xml
+++ b/clientapp/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">ENTER_MAPS_KEY_HERE</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDd-5edzKWRI0QQAjAljjtNBeJ6gUZB-Uc</string>
 </resources>
