--- a/clientapp/app/src/main/res/layout/list_guest.xml
+++ b/clientapp/app/src/main/res/layout/list_guest.xml
@@ -1,12 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textitext"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
 
-    android:textColor="@color/colorText"
-    android:text="HALLO GÄSTELISTE">
-</TextView>
+    android:id="@+id/guestListRecycler"
+    android:scrollbars="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
