--- a/clientapp/app/src/main/res/layout/list_info.xml
+++ b/clientapp/app/src/main/res/layout/list_info.xml
@@ -1,12 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TextView
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textitext"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:fillViewport="true"
 
-    android:textColor="@color/colorText"
-    android:text="HALLO INFO">
-</TextView>
+    android:paddingStart="@dimen/margin_humongous"
+    android:paddingEnd="@dimen/margin_humongous"
+    android:paddingTop="@dimen/margin_normal"
+    android:paddingBottom="@dimen/margin_normal">
 
+
+    <com.example.d062589.partylive.Utils.FontAwesome
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/location"
+        android:textColor="@color/colorText" />
+    <TextView
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_big"
+
+        android:textColor="@color/colorText"
+        android:textSize="@dimen/text_size_normal">
+    </TextView>
+
+
+    <com.example.d062589.partylive.Utils.FontAwesome
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/description"
+        android:textColor="@color/colorText"/>
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:textColor="@color/colorText"
+        android:textSize="@dimen/text_size_normal">
+    </TextView>
+
+</LinearLayout>
