--- a/clientapp/app/src/main/res/values/dimen.xml
+++ b/clientapp/app/src/main/res/values/dimen.xml
@@ -15,12 +15,15 @@
     <dimen name="text_size_normal">16sp</dimen>
     <dimen name="text_size_medium">18sp</dimen>
     <dimen name="text_size_big">20sp</dimen>
+    <dimen name="text_size_huge">25sp</dimen>
 
     <dimen name="z_above_bottom_sheet">8dp</dimen>
     <dimen name="z_bottom_sheet">6dp</dimen>
 
     <!-- margin -->
+    <dimen name="margin_humongous">26dp</dimen>
     <dimen name="margin_huge">18dp</dimen>
+    <dimen name="margin_very_big">15dp</dimen>
     <dimen name="margin_big">12dp</dimen>
     <dimen name="margin_medium">10dp</dimen>
     <dimen name="margin_normal">8dp</dimen>
