--- a/clientapp/app/src/main/res/layout/party_details.xml
+++ b/clientapp/app/src/main/res/layout/party_details.xml
@@ -40,7 +40,10 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
+                android:id="@+id/stay_home_button"
                 android:layout_height="match_parent"
+                android:clickable="true"
+                android:focusable="true"
                 android:onClick="stayHome">
 
                 <com.example.d062589.partylive.Utils.FontAwesome
@@ -57,9 +60,12 @@
 
             <!-- Participate Button -->
             <LinearLayout
+                android:id="@+id/participate_button"
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
+                android:clickable="true"
+                android:focusable="true"
                 android:onClick="participate">
 
                 <com.example.d062589.partylive.Utils.FontAwesome
